# VQVAE-Lightning

./: README.md  pyproject.toml
config/: example.yaml  fsq_vqvae.yaml  vqvae.yaml
scripts/: cli.py  drive.py
src/vqvae_lightning/: __init__.py  callbacks.py  dataset.py  module.py  networks.py
